coupon-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-api
  name: coupon-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: coupon-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/coupon08-30-coupon-network: "true"
        io.kompose.service: coupon-api
    spec:
      containers:
        - env:
            - name: MYSQL_HOST #연결할 mysql host
              value: coupon-mysql 
            - name: MYSQL_PORT #연결할 mysql port
              value: "3306"
            - name: DATASOURCE_URL
              value: jdbc:mysql://coupon-mysql:3306/coupon
            - name: MYSQL_DATABASE
              value: coupon
            - name: MYSQL_USER
              value: abcd
            - name: MYSQL_PASSWORD
              value: "1234"
            - name: REDIS_HOST
              value: coupon-redis
            - name: REDIS_PORT
              value: "6379"
            - name: PROFILES_ACTIVE
              value: docker
          image: cloudbreak6th/coupon-api:v1.1
          name: coupon-api
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
            #nodeSelector:
        #nodename:
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-api
  name: coupon-api
spec:
  selector:
    app: coupon-api
  ports:
    - name: coupon-api
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: coupon-api
status:
  loadBalancer: {}
