coupon-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 2.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-mysql
  name: coupon-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: coupon-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/coupon08-30-coupon-network: "true"
        io.kompose.service: coupon-mysql
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --explicit_defaults_for_timestamp=1
          image: mysql:8.0
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          name: coupon-mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
                #nodeSelector:
                #nodename:
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-mysql
  name: coupon-mysql
spec:
  selector:
    app: coupon-mysql
  ports:
    - name: coupon-mysql
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: coupon-mysql
status:
  loadBalancer: {}
