coupon-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-redis
  name: coupon-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: coupon-redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/coupon08-30-coupon-network: "true"
        io.kompose.service: coupon-redis
    spec:
      containers:
        - args:
            - redis-server
            - --port
            - "6379"
          image: redis:7.2-alpine
          name: coupon-redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources: {}
            #nodeSelector:
        #nodename:
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: coupon-redis
  name: coupon-redis
spec:
  ports:
    - name: coupon-redis
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: coupon-redis
status:
  loadBalancer: {}
