shop-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-back
  name: shop-back
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-back
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/coupon08-30-coupon-network: "true"
        io.kompose.service: shop-back
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: cloudbreak6th/shop-back:v1.0
          name: shop-back
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
            #nodeSelector:
            #nodename:
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-back
  name: shop-back
spec:
  selector:
    app: shop-back
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: shop-back
status:
  loadBalancer: {}
