shop-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-front
  name: shop-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shop-front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/coupon08-30-coupon-network: "true"
        io.kompose.service: shop-front
    spec:
      containers:
        - image: cloudbreak6th/shop-front:v1.0
          name: shop-front
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources:
            #nodeSelector:
            #nodename:
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: shop-front
  annotations:
    kompose.cmd: C:\Users\sktmf\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shop-front
spec:
  ports:
    - name: "80"
      targetPort: 80
      port: 80
  selector:
    io.kompose.service: shop-front
status:
  loadBalancer: {}
